Fix word wrapping in the "Edit Review" dialog.
I recently replaced the multiple CodeMirror boxes with inlineEditors in the
"Edit Review" dialog. One small bit of fallout from this is that the word
wrapping wasn't correct when saving a long comment. The problem here was that
the 'pre' element inside the review dialog didn't have our `.pre-wrap` macro.

Testing done:
Set a long body top field and saw that it wrapped correctly.

Reviewed at https://reviews.reviewboard.org/r/6371/

--- a/reviewboard/static/rb/css/pages/reviews.less
+++ b/reviewboard/static/rb/css/pages/reviews.less
@@ -1212,6 +1212,10 @@
   #review-form-comments {
     background: none;
 
+    pre {
+      .pre-wrap;
+    }
+
     .comments {
       list-style: none;
       margin: 0;
